--- a/script/install
+++ b/script/install
@@ -11,6 +11,7 @@ sudo chmod +x /usr/local/bin/fancontrol
 echo "=> Starting fan controller via Systemd...\n"
 sudo cp fancontrol.service /lib/systemd/system/fancontrol.service
 
+sudo systemctl daemon-reload
 sudo systemctl enable fancontrol.service
 sudo systemctl start fancontrol.service
 
