--- a/script/install
+++ b/script/install
@@ -4,6 +4,9 @@ set -e
 
 cd "$(dirname "$0")/.."
 
+sudo apt install -y python3-pip
+sudo pip3 install -r requirements.txt
+
 echo "=> Installing fan controller...\n"
 sudo cp fancontrol /usr/local/bin/
 sudo chmod +x /usr/local/bin/fancontrol
